Fix Add button position on FireFox

--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,7 @@ main {
 .input-section .icon {
   position: absolute;
   right: 12px;
+  top: 0;
   text-align: left;
   font-size: 12px;
   font-weight: 600;
